welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:11: error: only classes can have declared but undefined members
def faireV (c: Color);
    ^MethodsPicture:14: error: not found: value c
	point(c: Color);
              ^MethodsPicture:15: error: not found: value c
	avance; gauche; avance;point(c: Color);recule; droite;
                                     ^MethodsPicture:16: error: not found: value c
	avance; point(c: Color); avance;
                      ^